fix input appearance on iOS devices

--- a/source/stylesheets/_forms.scss
+++ b/source/stylesheets/_forms.scss
@@ -11,7 +11,9 @@ form.inline-form {
 
 input,
 textarea {
+  appearance: none;
   border: 1px solid $gray;
+  border-radius: 0;
   width: 100%;
   padding: 0.5rem;
   outline: none;
